--- a/app/src/main/res/layout/activity_synchronized.xml
+++ b/app/src/main/res/layout/activity_synchronized.xml
@@ -39,7 +39,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Wkrótce będzie można synchronizować wycieczki!"
+                    android:text="Wkrótce będzie można\n synchronizować wycieczki!"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
