--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,12 +80,13 @@
                     android:layout_height="match_parent"
                     android:padding="16dp"
                     android:text="Nie jestem robotem."
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="15dp"/>
             </LinearLayout>
 
             <TextView
                 android:id="@+id/forgot_password_txt"
-                android:layout_width="315dp"
+                android:layout_width="289dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
@@ -117,7 +118,7 @@
                 android:padding="8dp"
                 android:text="Nie masz konta? Zarejestruj się!"
                 android:textColor="#87D19E"
-                android:textSize="18sp" />
+                android:textSize="10sp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
