--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -34,7 +34,7 @@
 
     <Button
         android:id="@+id/buttonChangePassword"
-        android:layout_width="359dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Zmień hasło"
@@ -43,7 +43,7 @@
 
     <Button
         android:id="@+id/buttonChangeTheme"
-        android:layout_width="362dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Zmień motyw"
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/buttonChangeLanguage"
-        android:layout_width="367dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Zmień język"
@@ -61,7 +61,7 @@
 
     <Button
         android:id="@+id/buttonLogout"
-        android:layout_width="362dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Wyloguj się"
