--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="?attr/colorPrimary"
     android:gravity="center">
 
     <androidx.cardview.widget.CardView
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        android:background="@color/white">
 
 
         <LinearLayout
@@ -25,7 +26,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Odzyskiwanie\nhasła"
+                android:text="@string/odzyskiwanie_hasla"
                 android:textAlignment="center"
                 android:textColor="#87D19E"
                 android:textSize="32sp"
@@ -39,9 +40,9 @@
                 android:background="@drawable/custom"
                 android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
-                android:hint="Nazwa użytkownika"
+                android:hint="@string/nazwa_uzytkownika"
                 android:padding="8dp"
-                android:textColor="@color/black" />
+                android:textColor="?attr/colorPrimary" />
 
             <EditText
                 android:id="@+id/forgot_password"
@@ -51,10 +52,10 @@
                 android:background="@drawable/custom"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:hint="Nowe hasło"
+                android:hint="@string/nowe_haslo"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColor="@color/black" />
+                android:textColor="?attr/colorPrimary" />
 
             <EditText
                 android:id="@+id/forgot_password2"
@@ -64,10 +65,10 @@
                 android:background="@drawable/custom"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:hint="Powtórz nowe hasło"
+                android:hint="@string/powtorz_nowe_haslo"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColor="@color/black" />
+                android:textColor="?attr/colorPrimary" />
 
 
             <Button
@@ -75,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:backgroundTint="#87D19E"
-                android:text="ZRESETUJ HASŁO"
+                android:text="@string/zresetuj_haslo"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
