--- a/app/src/main/res/layout/activity_synchronized.xml
+++ b/app/src/main/res/layout/activity_synchronized.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="?attr/colorPrimary"
     tools:context=".ui.firstpage.SynchronizedActivity">
 
     <ScrollView
@@ -20,13 +20,14 @@
                 android:id="@+id/quit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/quit" />
+                app:srcCompat="@drawable/quit"
+                android:background="?attr/colorSecondary"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Synchronizacja wycieczek"
-                android:textColor="@color/black"
+                android:text="@string/synchronizacja_wycieczek"
+                android:textColor="?attr/colorOnSecondary"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginBottom="16dp" />
@@ -39,8 +40,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Wkrótce będzie można\n synchronizować wycieczki!"
-                    android:textColor="@color/black"
+                    android:text="@string/wkrotce_bedzie_mozna_synchronizowac_wycieczki"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
