--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.HomeFragment"
-    android:background="@color/green">
+    android:background="?attr/colorPrimary">
 
 
 <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
@@ -75,8 +75,8 @@
                     android:layout_height="30dp"
                     android:layout_marginStart="72dp"
                     android:layout_marginTop="8dp"
-                    android:text="Hej, XYZ"
-                    android:textColor="@color/black"
+                    android:text="@string/hej_xyz"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +88,8 @@
                     android:layout_height="85dp"
                     android:layout_marginEnd="76dp"
                     android:layout_marginBottom="4dp"
-                    android:text="\nCo planujesz?"
-                    android:textColor="@color/black"
+                    android:text="@string/co_planujesz"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textSize="22dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -117,7 +117,8 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Zaplanuj\nwycieczkę"
+                        android:text="@string/zaplanuj_wycieczke"
+                        android:textColor="?attr/colorOnSecondary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +138,8 @@
                         android:id="@+id/textView6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Zaplanowane\nwycieczki"
+                        android:text="@string/zaplanowane_wycieczki"
+                        android:textColor="?attr/colorOnSecondary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +168,8 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Ranking"
+                        android:text="@string/ranking"
+                        android:textColor="?attr/colorOnSecondary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +189,8 @@
                         android:id="@+id/textView9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Zsynachronizuj\nwycieczkę"
+                        android:text="@string/zsynachronizuj_wycieczki"
+                        android:textColor="?attr/colorOnSecondary"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -204,8 +208,8 @@
                     android:layout_height="30dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
-                    android:text="Twoje zaplanowane wycieczki"
-                    android:textColor="@color/black"
+                    android:text="@string/twoje_zaplanowane_wycieczki"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -236,8 +240,8 @@
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tutaj pokażą się\nzaplanowane wycieczki!"
-                    android:textColor="@color/black"
+                    android:text="@string/tutaj_pokaza_sie_zaplanowane_wycieczki"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
