--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,10 @@
     <color name="lavender">#8692f7</color>
     <color name="green">#BDDCC7</color>
     <color name="beige">#F5F5DC</color>
+    <color name="dark_gray">#616161</color>
+    <color name="blue">#000864</color>
+    <color name="dark_green">#87D19E</color>
+
 
 
 </resources>
