--- a/app/src/main/res/layout/item_ranking_trip.xml
+++ b/app/src/main/res/layout/item_ranking_trip.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cel: ... "
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Data: ... "
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintTop_toBottomOf="@id/ranking_trip_destination"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -46,6 +46,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/details_button"
         app:layout_constraintStart_toEndOf="@+id/ranking_trip_destination"
         app:layout_constraintTop_toTopOf="parent" />
