--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -8,7 +8,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/ranking_trip_destination"
+        android:id="@+id/trip_destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cel: ... "
@@ -19,13 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/ranking_trip_date"
+        android:id="@+id/trip_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Data: ... "
         android:textColor="@android:color/white"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/ranking_trip_destination"
+        app:layout_constraintTop_toBottomOf="@id/trip_destination"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
